[package]
name = "qobuzd"
version = "0.1.0"
edition = "2021"
authors = ["QobuzD Team"]
description = "Qobuz Connect client for Linux"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls-webpki-roots", "stream", "blocking"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
md-5 = "0.10"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
directories = "5.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
keyring = "3"
zeroize = { version = "1.5", features = ["derive"] }
aes-gcm = "0.10"
rand_chacha = "0.3"
sha1 = "0.10"
hex = "0.4"
tokio-tungstenite = { version = "0.24", features = ["native-tls", "native-tls-vendored"] }
futures-util = "0.3"
symphonia = { version = "0.5", features = ["flac", "pcm", "mp3", "aac", "ogg", "wav"] }
cpal = "0.15"
rubato = "0.15"
aes = "0.8"
cbc = "0.1"
ctr = "0.9"
hkdf = "0.12"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
